--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ jwt.expiration.time=3600000
 ############ Devtools Docker ##############
 spring.devtools.remote.secret=mysecret
 #-Djava.library.path=/usr/local/java/lib:/usr/local/hadoop/lib
+
+########### ELASTICSEARCH ################
+elasticsearch.host=${ELASTIC_SEARCH_HOST}
+elasticsearch.port=${ELASTIC_SEARCH_PORT}
