update env file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
       SPRING_DATASOURCE_USERNAME: ${MYSQL_USER}
       SPRING_DATASOURCE_PASSWORD: ${MYSQL_PASSWORD}
+      ELASTIC_SEARCH_PORT: ${ELASTIC_SEARCH_PORT}
+      ELASTIC_SEARCH_HOST: ${ELASTIC_SEARCH_HOST}
     ports:
       - "8080:8080"
     depends_on:
