--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - "8080:8080"
     depends_on:
       - mysql
+      - elasticsearch
     networks:
       - spring_boot
   elasticsearch:
